src/components/admin/SelectionMap.css
@media only screen and (max-width: 800px) {
    .SelectionMap {
        width: 100%;
        height: 200px;
    }
}

@media only screen and (min-width: 801px) {
    .SelectionMap {
        width: 100%;
        height: 300px;
        position: relative;
    }
}
.centered {
    display: inline;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -90%);
    z-index: 100;
}

